<resources>
    <string name="app_name">Fleur</string>
    <string name="subtitle">- find your flower -</string>
    <string name="arti_bunga">Cari Arti Bunga</string>
    <string name="toko_bunga">Cari Toko Bunga</string>
    <string name="nama_bunga">Nama Bunga</string>
    <string name="nama_ilmiah">Nama Ilmiah</string>
    <string name="arti">Arti Bunga :</string>
    <string name="description">Deskripsi</string>
    <string name="favorite">Favorit</string>
    <string name="share">Bagikan</string>
    <string name="cardview">Card View</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="deskripsi1">Deskripsi Bunga</string>
    <string name="deskripsi2">Deskripsi Bunga Detail</string>
    <string name="detail">Detail</string>
    <string name="beli">Beli</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="alamat">Alamat Toko</string>
    <string name="deskripsi_toko">Deskripsi Toko</string>
    <string name="you_choose">Kamu Memilih</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="search">Pencarian</string>
    <string name="search_hint">Masukkan Nama Bunga</string>
    <string name="search_hint2">Masukkan Nama Toko</string>

    <string name="anggrek">Anggrek</string>
    <string name="anyelir_putih">Anyelir Putih</string>
    <string name="anyelir_kuning">Anyelir Kuning</string>
    <string name="anyelir_merah">Anyelir Merah</string>
    <string name="anyelir_pink">Anyelir Merah Muda</string>
    <string name="anyelir_ungu">Anyelir Ungu</string>
    <string name="daisy_putih">Daisy Putih</string>
    <string name="daisy_kuning">Daisy Kuning</string>
    <string name="daisy_ungu">Daisy Ungu</string>
    <string name="daisy_merah">Daisy Merah</string>
    <string name="daisy_pink">Daisy Merah Muda</string>
    <string name="daisy_orange">Daisy Jingga</string>
    <string name="herbras">Herbras</string>
    <string name="mawar">Mawar</string>
    <string name="tulip">Tulip</string>
    <string name="teratai">Teratai</string>
    <string name="kembang_sepatu">Kembang Sepatu</string>
    <string name="kateliya">Kateliya</string>
    <string name="melati">Melati</string>
    <string name="aster">Aster</string>

    <string name="anggrek_detail">Bunga anggrek dianggap romantis karena bunga ini melambangkan kecantikan, cinta, dan dapat menarik hati.</string>
    <string name="anyelir_putih_detail">Bunga anyelir putih menyimbolkan rasa syukur, cinta yang murni, kesetiaan, dan cinta yang menggebu dan mendalam.</string>
    <string name="anyelir_kuning_detail">Bunga anyelir kuning merupakan lambang penolakan, emosi, benci, sekaligus kecewa terhadap seseorang.</string>
    <string name="anyelir_merah_detail">Bunga anyelir merah diartikan sebagai bentuk kekagumana dan persahabatan.</string>
    <string name="anyelir_pink_detail">Bunga anyelir pink dikaitkan dengan cinta abadi seorang ibu dan kaum wanita.</string>
    <string name="anyelir_ungu_detail">Bunga anyelir ungu dikaitkan dengan duka cita dan kreativitas, tetapi selain itu bunga ini melambangkan ketidakteraturan yang dimaksudkan kamu memiliki kemampuan untuk berubah sesuai dengan keinginannya.</string>
    <string name="daisy_putih_detail">Bunga daisy putih melambangkan sebuah kesetiaan dan kepolosan bisa kamu pilih jika orang yang akan kamu beri rangkaian bunga ini adalah orang yang lemah lembut dan kalem.</string>
    <string name="daisy_kuning_detail">Bunga daisy kuning mungkin akan mewakilkan perasaan kamu yang sedang senang dan bahagia. Jadi, jika kamu dan orang terkasih sedang merasa senang bisa memberikan bunga daisy dengan warna ini.</string>
    <string name="daisy_ungu_detail">Bunga daisy ungu memiliki makna kelembutan dan misterius.</string>
    <string name="daisy_merah_detail">Bunga daisy merah memiliki makna gairah cinta dengan gairah yang sangat besar.</string>
    <string name="daisy_pink_detail">Bunga daisy merah muda memancarkan aura yang manis karena warna merah muda memang terlihat lembut.</string>
    <string name="daisy_orange_detail">Bunga daisy orange memiliki arti bahagia dan suka cita.</string>
    <string name="herbras_detail">Bunga herbras melambangkan suatu kecantikan dan bentuk syukur yang Anda sampaikan atas hadirnya seseorang yag Anda anggap penting.</string>
    <string name="mawar_detail">Tanaman Hiasan bunga yang paling banyak dicari dan disukai oleh semua orang. Karena dengan warna dan bentuknya yang cantik, serta wanginya yang harum mampu menggugah perasaan seseorang</string>
    <string name="tulip_detail">Bunga Tulip yang banyak tumbuh dan terkenal di negara Belanda, juga merupakan jenis Hiasan Bunga yang banyak dicari. Bunga ini tumbuh di musim dingin, dan tidak dapat tumbuh subur di tempat yang beriklim tropis.</string>
    <string name="teratai_detail">Bunga Teratai lebih dikenal masyarakat dunia dengan nama Water lily. Namun Bunga Hiasan ini bukanlah jenis dari bunga Lily. Bunga ini adalah bunga dari tanaman yang hidup dan tumbuh di permukaan air.</string>
    <string name="kembang_sepatu_detail">Kembang Sepatu berasal dari Asia Timur. Bunga ini juga dapat dijadikan sebagai tanaman hias karena warna-warnanya yang cantik.</string>
    <string name="kateliya_detail">Bunga Kamboja berasal dari Amerika Tengah dan banyak tumbuh di Meksiko dan Venezuela. Bunga ini lebih dikenal dengan nama Plumeria, yang diambil dari nama seorang ahli tanaman yang berasal dari Perancis dan terkenal pada abad ke-17, yaitu Charles Plumier..</string>
    <string name="melati_detail">Bunga yang tumbuh setiap tahun ini memiliki wangi yang sangat harum dan khas. Bunga ini tumbuh di daerah tropis dan mekar pada musim semi atau musim panas..</string>
    <string name="aster_detail">Sebuah taman bunga tidak lengkap bila tidak ada Tanaman Hiasan bunga Aster. Bunga dengan banyak jenis dan warna yang cantik ini mencerminkan keriangan, kegembiraan dan kesederhanaan.</string>

    <string name="anggrek_latin">Orchidaceae</string>
    <string name="anyelir_putih_latin">Dianthus caryophyllus</string>
    <string name="anyelir_kuning_latin">Dianthus caryophyllus</string>
    <string name="anyelir_merah_latin">Dianthus caryophyllus</string>
    <string name="anyelir_pink_latin">Dianthus caryophyllus</string>
    <string name="anyelir_ungu_latin">Dianthus caryophyllus</string>
    <string name="daisy_putih_latin">Bellis Perennis</string>
    <string name="daisy_kuning_latin">Bellis Perennis</string>
    <string name="daisy_ungu_latin">Bellis Perennis</string>
    <string name="daisy_merah_latin">Bellis Perennis</string>
    <string name="daisy_pink_latin">Bellis Perennis</string>
    <string name="daisy_orange_latin">Bellis Perennis</string>
    <string name="herbras_latin">Garbera</string>
    <string name="mawar_latin">Rosa</string>
    <string name="tulip_latin">Tulipa</string>
    <string name="teratai_latin">Nymphaea</string>
    <string name="kembang_sepatu_latin">Hibiscus rosa-sinensis</string>
    <string name="kateliya_latin">Cattleya</string>
    <string name="melati_latin">Jasminum</string>
    <string name="aster_latin">Asteraceae</string>

    <string name="adisty_florist">Adisty Florist</string>
    <string name="and_florist">And Florist</string>
    <string name="adm_florist">Adm Florist</string>
    <string name="ays_florist">Ays Florist</string>
    <string name="black_rose_florist">Black Rose Florist</string>
    <string name="distin_florist">Distin Florist</string>
    <string name="els_florist">Els Florist</string>
    <string name="fleur_tales">Fleur Tales</string>
    <string name="adisty_florist_detail">Way Kandis, No telp 081278813326</string>
    <string name="and_florist_detail">Jl. Purnawirawan Raya No.10, Labuhan Ratu, Langkapura, Kota Bandar Lampung, Lampung 35113, No telp 088276634282</string>
    <string name="adm_florist_detail">Jl. Nusantara, Labuhan Ratu, Kec. Kedaton, Kota Bandar Lampung, Lampung 35132, No telp 081271975782</string>
    <string name="ays_florist_detail">Jl. Bumi Manti II No.1, Kp. Baru, Kec. Kedaton, Kota Bandar Lampung, Lampung 35141, No telp 081540870565</string>
    <string name="black_rose_florist_detail">Jl. Purnawirawan Raya No.97, Gn. Terang, Langkapura, Kota Bandar Lampung, Lampung 35113, No telp 0816342780</string>
    <string name="distin_florist_detail">Jl. Purnawirawan II No.21, Gn. Terang, Langkapura, Kota Bandar Lampung, Lampung 35112, No telp 085279183255</string>
    <string name="els_florist_detail">Jl Labuhan Ratu, Bandar Lampung, No telp 088706451533</string>
    <string name="fleur_tales_detail">Jl. Cendana 4, Kedamaian, Kota Bandar Lampung, Lampung 35122, No telp 085106588185</string>

    <string name="change_language">Ubah Bahasa</string>
    <string name="date">April 4, 2021</string>
    <string name="bunga_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_bunga">Galeri</string>
    <string name="staggered">Staggered</string>
    <string name="change_display">Ubah Tampilan</string>
    <string name="hello_user">Halo User!</string>
    <string name="hello_user_detail">Jangan lupa cek toko bunga disini!</string>
    <string name="welcome">Selamat datang di Fleur!</string>
</resources>